--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "libraries/RF24"]
 	path = libraries/RF24
 	url = https://github.com/nRF24/RF24.git
+[submodule "libraries/PMS_Library"]
+	path = libraries/PMS_Library
+	url = https://github.com/fu-hsi/PMS.git
