--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "libraries/FreeModbusAVR"]
 	path = libraries/FreeModbusAVR
 	url = ../Arduino-FreeModbusAVR.git
+[submodule "libraries/ArtronShop_BH1750"]
+	path = libraries/ArtronShop_BH1750
+	url = https://github.com/ArtronShop/ArtronShop_BH1750.git
